--- a/index.html
+++ b/index.html
@@ -4,33 +4,44 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>Yasrpg by Depado</title>
-
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <script src="javascripts/scale.fix.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+    <script src="javascripts/respond.js"></script>
+    <!--[if lt IE 9]>
+      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+    <!--[if lt IE 8]>
+    <link rel="stylesheet" href="stylesheets/ie.css">
+    <![endif]-->
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
   </head>
   <body>
-    <div class="wrapper">
-      <header>
-        <h1>Yasrpg</h1>
-        <p>Yet Another SNES RPG</p>
-        <p class="view"><a href="https://github.com/Depado/yasrpg">View the Project on GitHub <small>Depado/yasrpg</small></a></p>
-        <ul>
-          <li><a href="https://github.com/Depado/yasrpg/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/Depado/yasrpg/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/Depado/yasrpg">View On <strong>GitHub</strong></a></li>
-        </ul>
-      </header>
-      <section>
-        <h3>
-<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+      <div id="header">
+        <nav>
+          <li class="fork"><a href="https://github.com/Depado/yasrpg">View On GitHub</a></li>
+          <li class="downloads"><a href="https://github.com/Depado/yasrpg/zipball/master">ZIP</a></li>
+          <li class="downloads"><a href="https://github.com/Depado/yasrpg/tarball/master">TAR</a></li>
+          <li class="title">DOWNLOADS</li>
+        </nav>
+      </div><!-- end header -->
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+    <div class="wrapper">
+
+      <section>
+        <div id="title">
+          <h1>Yasrpg</h1>
+          <p>Yet Another SNES RPG</p>
+          <hr>
+          <span class="credits left">Project maintained by <a href="https://github.com/Depado">Depado</a></span>
+          <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
+        </div>
+
+        <h3>
+<a name="yasrpg--yet-another-snes-role-playing-game" class="anchor" href="#yasrpg--yet-another-snes-role-playing-game"><span class="octicon octicon-link"></span></a>YasRPG : Yet Another SNES Role Playing Game</h3>
+
+<p>YasRPG is intended to be an old school role playing game, accessible to any platform.</p>
 
 <pre><code>$ cd your_repo_root/repo_name
 $ git fetch origin
@@ -59,11 +70,8 @@ $ git checkout gh-pages
 
 <p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
       </section>
+
     </div>
-    <footer>
-      <p>Project maintained by <a href="https://github.com/Depado">Depado</a></p>
-      <p>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></p>
-    </footer>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
     
   </body>
